# computer_vision_projects

./: README.md
Camera_Calibration_and_Augmented_Reality/: CMakeLists.txt  README.md  arsystem.cpp  calibration.cpp  definitions.cpp  definitions.h  harriscorners.cpp
Content-based-Image-Retrieval/: CMakeLists.txt  README.md  csv_util.cpp  csv_util.h  feature.cpp  matching.cpp  matching.h  readfiles.cpp
Real-time-2D-object-detection/: CMakeLists.txt  README.md  check.cpp  recognition.cpp  recognition.h
Real-time-filtering/: CMakeLists.txt  README.md  filter.cpp  filter.h  imgDisplay.cpp  vidDisplay.cpp
Recognition-using-Deep-Networks/: README.md  alexnet.py  gabor_filter.py  live_recognition.py  network.py  task1.py  task1F.py  task2.py  task3.py  task4.py
